Changed display at request of Adrian to prevent wrapping of footer logos.

--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ height: -200px;
 }
 .footimg {
   display: inline-block;
- /*   margin: 0 1%;
-  width: 17%; */
+  margin: 0 1%;
+  width: 17%;
 }
 .footerimages {
   text-align: center;
